# bayesian-toolbox

./: README.md  environment.yml  pyproject.toml  test.ipynb
draft/: counterfactual_2.ipynb  module_test.ipynb  sketchbook.ipynb  test.ipynb
notebooks/: bayese_vs_frequentist_p_value_equivalent_97.5.ipynb  bayese_vs_frequentist_sampling_error.ipynb  counterfactual.ipynb  power_analysis_stablity.ipynb  sketchbook.ipynb
product_analytics/: __init__.py  power_analysis.py  variant_evaluation.py
sandbox/: counterfactual.ipynb  counterfactual_pymc.ipynb  pymcsketch.ipynb  sketchbook.ipynb
tests/: conftest.py
tests/performance/: test_estimation_speed.py
tests/product_analytics/: test_binary_search.py  test_variant_evaluation.py
