[tool.poetry]
package-mode = false
version = "0.1.0"
description = "Bayesian Toolbox for Product Analytics"
authors = ["andreas.adlichhammer@aahammer.eu"]

[tool.poetry.dependencies]
python = "3.12.9"
numpy = "^2.2"
pandas = "^2.2"
scikit-learn = "^1.6"
matplotlib = "^3.10"
seaborn = "^0.13"
jupyter = "^1.1"
polars = "^1.3"
statsmodels = "^0.14"
pymc="^5.22"
arviz="^0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"