[tool.poetry]
package-mode = true
name= 'product_analytics'
version = "0.1.0"
description = "Bayesian Toolbox for Product Analytics"
authors = ["andreas.adlichhammer@aahammer.eu"]

[tool.poetry.dependencies]
python = "3.12.9"
numpy = "^2.2"
pandas = "^2.2"
scikit-learn = "^1.6"
matplotlib = "^3.10"
seaborn = "^0.13"
jupyter = "^1.1"
polars = "^0.20"
statsmodels = "^0.14"
pymc = "^5.22"
arviz = "^0.21"
orbit-ml = "^1.1.4"
xgboost = "^2.0"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"